--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-server.port=8888
-spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=classpath:/config, classpath:/appl, classpath:/app2
-spring.cloud.config.server.overrides.foo=myapp
+driverClassName=com.mysql.jdbc.Driver
+url=mysql:jdbc://localhost:3306/test
+username=root
+password=root
